--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta content="ie=edge" http-equiv="x-ua-compatible">
-	<title>Papa's Games 🍔 Unblocked Games</title>
+	<title>Papa's Games 🍔 Free Papa Louie Games!</title>
 	<meta
 		content="Papa's Games Unblocked: Play Papa's Freezeria & More for Free Online | No Download Restaurant Tycoon Simulator"
 		name="description">
